trying to fix safari plip card css with css -webkit-backface-visibility: hidden; backface-visibility: hidden; because it does not work on safari only

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,14 +105,16 @@ img {
     transform-style: preserve-3d;
     transition: transform .5s;
     width: 21%;
+   
 }
 .front-card {
     position: relative;
     backface-visibility: hidden;
-    
     transform: rotateY(180deg);
     width: 100%;
     height: 100%;
+    -webkit-backface-visibility: hidden; 
+    backface-visibility: hidden;
 }
 .back-card {
     width: 100%;
